# spancloud

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/skyforge/: __init__.py
src/skyforge/analysis/: __init__.py  models.py
src/skyforge/cli/: __init__.py  helpers.py  main.py
src/skyforge/cli/commands/: action.py  audit.py  map.py  profile.py  s3.py
src/skyforge/config/: __init__.py  settings.py  sidebar.py
src/skyforge/core/: exceptions.py  export.py  registry.py
src/skyforge/providers/alibaba/: actions.py  auth.py  compute.py  container.py  database.py  loadbalancer.py  provider.py  security.py  unused.py
src/skyforge/providers/aws/: actions.py  auth.py  elb.py  lambda_.py  login.py  rds.py  regions.py  relationships.py  resources.py  services.py  vpc.py
src/skyforge/providers/azure/: __init__.py  aks.py  auth.py  compute.py  database.py  login.py  monitoring.py  network.py  security.py  unused.py
src/skyforge/providers/digitalocean/: __init__.py  auth.py  cost.py  dns.py  droplets.py  kubernetes.py  loadbalancer.py  provider.py  relationships.py  security.py  vpc.py
src/skyforge/providers/gcp/: __init__.py  auth.py  cloudsql.py  cost.py  dns.py  gcs_details.py  login.py  monitoring.py  provider.py  security.py  unused.py  vpc.py
src/skyforge/providers/oci/: auth.py  compute.py  container.py  dns.py  network.py  provider.py  storage.py  unused.py
src/skyforge/providers/vultr/: actions.py  auth.py  loadbalancer.py  login.py  relationships.py  security.py  storage_details.py  vpc.py
src/skyforge/tui/: __init__.py
src/skyforge/tui/screens/: auth.py  settings.py
src/skyforge/tui/widgets/: provider_panel.py  provider_tab.py
src/skyforge/utils/: __init__.py  logging.py  throttle.py
src/spancloud/: __init__.py  __main__.py
src/spancloud/cli/: __init__.py  helpers.py  main.py
src/spancloud/cli/commands/: action.py  audit.py  auth.py  config.py  cost.py  gcs.py  gui.py  map.py  monitor.py  permissions.py  profile.py  provider.py  resource.py  s3.py  status.py  tui.py  unused.py  vultr_storage.py
src/spancloud/config/: __init__.py  settings.py  sidebar.py
src/spancloud/core/: __init__.py  exceptions.py  export.py  provider.py  registry.py  resource.py
src/spancloud/gui/: __init__.py  app.py  async_worker.py  theme.py
src/spancloud/gui/widgets/: auth_dialog.py  overview.py  provider_controls.py  provider_view.py  settings_dialog.py  sidebar.py  sidebar_settings_dialog.py  toolbar.py
src/spancloud/providers/: __init__.py
src/spancloud/providers/alibaba/: __init__.py  actions.py  auth.py  compute.py  container.py  cost.py  database.py  dns.py  loadbalancer.py  login.py  monitoring.py  network.py  provider.py  relationships.py  security.py  serverless.py  storage.py  storage_details.py  unused.py
src/spancloud/providers/aws/: __init__.py  actions.py  auth.py  cloudwatch.py  cost.py  eks.py  elb.py  iam.py  rds.py  (+12 more)
src/spancloud/tui/: __init__.py  app.py
src/spancloud/utils/: __init__.py  credentials.py  error_formatter.py  format.py  logging.py  retry.py  throttle.py  version_check.py
tests/: conftest.py
tests/test_analysis/: test_models.py  test_security.py
tests/test_core/: test_exceptions.py  test_export.py  test_registry.py  test_resource.py
tests/test_providers/: test_alibaba.py  test_aws_profile.py  test_aws_tier3.py  test_azure.py  test_digitalocean.py  test_gcp.py  test_gcp_tier3.py  test_oci.py  test_vultr.py
tests/test_utils/: test_credentials.py
(+108 files in other folders)
