[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spancloud"
version = "0.1.6"
description = "Multi-cloud infrastructure orchestrator — unified CLI, TUI, and GUI for AWS, GCP, Azure, DigitalOcean, Vultr, OCI, and Alibaba Cloud"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Dayton Jones", email = "jones.dayton@gmail.com" },
]
keywords = ["cloud", "infrastructure", "orchestrator", "aws", "gcp", "azure", "digitalocean", "vultr", "oci", "alibaba", "multi-cloud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=1.0.0",
    "typer>=0.15.0",
    "shellingham>=1.5.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.35.0",
    "google-cloud-compute>=1.20.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-container>=2.54.0",
    "google-cloud-functions>=1.19.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-monitoring>=2.20.0",
    "google-cloud-dns>=0.35.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.35.0",
    "httpx>=0.28.0",
    "azure-identity>=1.19.0",
    "azure-mgmt-resource>=23.2.0",
    "azure-mgmt-compute>=33.0.0",
    "azure-mgmt-storage>=22.0.0",
    "azure-mgmt-network>=27.0.0",
    "azure-mgmt-sql>=3.0.1",
    "azure-mgmt-cosmosdb>=9.6.0",
    "azure-mgmt-web>=7.3.0",
    "azure-mgmt-containerservice>=34.0.0",
    "azure-mgmt-dns>=8.2.0",
    "azure-mgmt-monitor>=6.0.2",
    "azure-mgmt-costmanagement>=4.0.1",
    "azure-mgmt-subscription>=3.1.1",
    "keyring>=25.0.0",
    "cryptography>=44.0.0",
    "google-cloud-bigquery>=3.0.0",
    "oci>=2.130.0",
    # Alibaba Cloud — TODO: coming in a future release
    # "alibabacloud-tea-openapi>=0.3.0",
    # "alibabacloud-ecs20140526>=4.0.0",
    # "alibabacloud-vpc20160428>=6.0.0",
    # "alibabacloud-rds20140815>=11.0.0",
    # "alibabacloud-cs20151215>=5.0.0",
    # "alibabacloud-slb20140515>=3.3.0",
    # "alibabacloud-alidns20150109>=3.0.0",
    # "alibabacloud-bssopenapi20171214>=4.0.0",
    # "alibabacloud-cms20190101>=2.0.0",
    # "alibabacloud-fc3-20230330>=1.0.0",
    # "oss2>=2.19.0",
    "PySide6>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "boto3-stubs[ec2,s3]>=1.35.0",
]

[project.scripts]
spancloud = "spancloud.cli.main:app"
sc = "spancloud.cli.main:app"

[project.urls]
Homepage = "https://github.com/daytonjones/spancloud"
Repository = "https://github.com/daytonjones/spancloud"

[tool.hatch.build.targets.wheel]
packages = ["src/spancloud"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
